# TrieFichiers

./: .gitignore  AGENTS.md  AppConfig.hpp  CMakeLists.txt  CleanupDialog.cpp  CleanupDialog.hpp  ComponentToolbox.cpp  ComponentToolbox.hpp  ConflictResolutionDialog.cpp  ConflictResolutionDialog.hpp  DuplicateExtCleaner.cpp  DuplicateExtCleaner.hpp  FolderCleaner.cpp  FolderCleaner.hpp  LangueManager.cpp  LangueManager.hpp  MainWindow.cpp  MainWindow.hpp  Project.cpp  Project.hpp  Qt GUI — bibliothèques et technologies utilisées.md  README.md  StripDialog.cpp  StripDialog.hpp  UpdateChecker.cpp  UpdateChecker.hpp  app.rc  application_multiplatforme.md  comment_avoir_une_icone.md  guide_implantation_fonctionnalites.md  langues.md  main.cpp  resources.qrc  toolchain-mingw64.cmake  verification_mise_a_jour.md  version.json
fonctions_a_ajouter/: supprime_vides.ps1
lang/: anglais.txt  francais.txt
